--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - sudo apt-get install python3-venv libyaml-dev
   - curl -sSf -o python-$PYTHON.tar.bz2 https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/16.04/x86_64/python-$PYTHON.tar.bz2
   - sudo tar xjf python-$PYTHON.tar.bz2 --directory /
-  - ./bootstrap.sh "/opt/python/$PYTHON/bin/$PYTHONCMD"
+  - ./bootstrap-dev.sh "/opt/python/$PYTHON/bin/$PYTHONCMD"
   - bin/pytest -vv
 notifications:
   webhooks: https://rocketchat.flyingcircus.io/hooks/xhNDCt6oRGGXfd8aT/XJhLrmwoZuy5ms67bpjbvHGSnP3BzgbP98FwCHM4KGfGsdND
