--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -W error  --tb=native --flake8  --cov=appenv --cov-report=html
+addopts = -W error  --tb=native --cov=appenv --cov-report=html
 testpaths = tests
